--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
   
     <div class="row">
        
-      <h2><a href="http://blog.mygluk.it/posts/glukloader-1.0-rc11">Glukloader 1.0-rc11</a></h2>
+      <h2><a href="http://blog.mygluk.it/posts/glukloader-1.0-rc11">Glukloader 1.0-rc11 now available.</a></h2>
 
        <div class="post content">
         <p>Today was a big milestone for Glukit: someone else besides me used it. Or rather, someone else besides me tried to.</p>
