--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,7 @@
 <ol>
 <li>At least 3 months of data is required for a value to be shown.</li>
 <li>From the limited samples that I have, my a1c estimates seem to be lower than reality.</li>
+<li>The A1C color wheel might been a bit aggressive at first glance. I debated internally whether or not to tune it down but decided not to in the end. The standard presented in Glukit is more in line with <a href="http://www.amazon.com/Dr-Bernsteins-Diabetes-Solution-Achieving/dp/0316182699">Dr. Richard Bernstein&rsquo;s recommendations</a> than what you&rsquo;d see from the <a href="http://www.diabetes.org/living-with-diabetes/treatment-and-care/blood-glucose-control/a1c/">American Diabetes Association</a>. If you haven&rsquo;t read <a href="http://www.amazon.com/Dr-Bernsteins-Diabetes-Solution-Achieving/dp/0316182699">The Diabetes Solution</a>, I highly recommend it. It definitely was a major factor in me getting my A1C down to 4.4.</li>
 </ol>
 
 <p>I&rsquo;d like to hear about your experience with this feature. For people with the desire to do so, one interesting experiment to run would be to check you estimate the day that you get your a1c tested. Write it down. When you get your a1c result, it would be interesting to compare the estimate with the actual value.</p>
