Add Post About A1C Estimation Tweaks.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
   
     <div class="row">
        
+      <h2><a href="http://blog.mygluk.it/posts/a1c-estimation-tweaks/">A1C Estimation Tweaks</a></h2>
+
+       <div class="post content">
+        <p>I just realized today that my a1c color wheel wasn&rsquo;t rendering properly on Safari. It&rsquo;s now fixed. If you were using Safari, now the a1c display should make a lot more sense. Firefox should also be covered if you&rsquo;re using a recent version.</p>
+
+<p>I also made a small tweak to the a1c calculation which should result in slightly higher values. I believe this should be more accurate but I don&rsquo;t have enough samples to actually know for sure.</p>
+
+<p>Again, I&rsquo;d like to hear about your experience with this feature. Refer to my <a href="http://blog.mygluk.it/posts/a1c-estimation">previous post</a> for my suggested experiment.</p>
+
+<p>Don&rsquo;t hesitate to tell me what your experience is with this. <a href="mailto:alexandre.normand@mygluk.it">Email me</a>!</p>
+
+<p>Cheers,</p>
+
+       </div>   
+    </div>       
+  
+    <div class="row">
+       
       <h2><a href="http://blog.mygluk.it/posts/a1c-estimation/">New Feature! Continuous A1C Estimation</a></h2>
 
        <div class="post content">
