Publish Glukloader 1.0.2 Announcement.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,20 @@
   
     <div class="row">
        
+      <h2><a href="http://blog.mygluk.it/posts/glukloader-1.0.2/">Glukloader 1.0.2</a></h2>
+
+       <div class="post content">
+        <p>I got a log file in my inbox earlier this evening. Sometimes, people write an accompanying email describing a problem but this time, I only had the log file. It didn&rsquo;t take long to see the crash and stack trace in the logs. After a quick investigation, I found that there was a bug when the last sync had been done long enough ago that the last page synched didn&rsquo;t exist anymore on the receiver. That was an easy fix and I just pushed the release with the bugfix.</p>
+
+<p>Grab the latest build <a href="https://dl.dropboxusercontent.com/u/3208429/glukloader%201.0.2.dmg?dl=1">here</a>.</p>
+
+<p>Thanks to the anonymous bug report!</p>
+
+       </div>   
+    </div>       
+  
+    <div class="row">
+       
       <h2><a href="http://blog.mygluk.it/posts/a1c-estimation-tweaks/">A1C Estimation Tweaks</a></h2>
 
        <div class="post content">
