Add Link to Safekeeper Readme.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 <h3 id="toc_0">Enter safekeeper</h3>
 
-<p>Based on the <a href="http://blog.golang.org/generate">go generate</a> examples, I set myself out to create a command-line tool that would take a few inputs and generate a file to be git ignored containing all application secrets. You have to follow the instructions to get a nice integration but once it&rsquo;s set up, developers can set their secrets in their environment and then they just have to run <code>go generate</code> or <code>goapp generate</code> to get them into the code to deploy or run.</p>
+<p>Based on the <a href="http://blog.golang.org/generate">go generate</a> examples, I set myself out to create a command-line tool that would take a few inputs and generate a file to be git ignored containing all application secrets. You have to <a href="https://github.com/alexandre-normand/safekeeper/blob/master/README.md">follow the instructions</a> to get a nice integration but once it&rsquo;s set up, developers can set their secrets in their environment and then they just have to run <code>go generate</code> or <code>goapp generate</code> to get them into the code to deploy or run.</p>
 
 <p>I tried to include a detailed example of how it can be used effectively but <a href="mailto:alexandre.normand@mygluk.it">let me know</a> if you find anything missing.</p>
 
