--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,22 @@
   
     <div class="row">
        
+      <h2><a href="http://blog.mygluk.it/posts/glukloader-1.0.4/">Glukloader 1.0.4</a></h2>
+
+       <div class="post content">
+        <p>Here&rsquo;s a bugfix release for something I hope I was the only one experiencing. I had noticed that my keyboard and mouse (and USB peripherals) on <code>iMac</code> would sometime stop working after it going to sleep. At first, I suspected a hardware issue but I started noticing one day that I had my Dexcom receiver plugged in before my Mac went idle. And it happened a few more times when my receiver was plugged in again. So I cleaned up a little the management of the USB device and made sure it would be closed after a successful sync rather than keeping it open. After some testing, it looks like that might have been it.</p>
+
+<p>Or maybe it was all a coincidence but either way, <code>Glukloader 1.0.4</code> is being a little more conservative in closing the resources and it&rsquo;s for the best.</p>
+
+<p>If you did have mysterious issues with your peripherals not responding after going idle, I apologize. Hopefully, this will solve that mystery.</p>
+
+<p>Grab the latest build <a href="https://dl.dropboxusercontent.com/u/3208429/glukloader%201.0.4.dmg?dl=1">here</a>.</p>
+
+       </div>   
+    </div>       
+  
+    <div class="row">
+       
       <h2><a href="http://blog.mygluk.it/posts/glukit-goes-open-source/">Glukit Goes Open-Source</a></h2>
 
        <div class="post content">
