--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,24 @@
   
     <div class="row">
        
+      <h2><a href="http://blog.mygluk.it/posts/glukloader-1.0.5/">Glukloader 1.0.5</a></h2>
+
+       <div class="post content">
+        <p>Just after <code>Glukloader 1.0.4</code>, I upgraded to <code>El Capitan</code> (OS X 10.11) to find that <code>Glukloader</code> wasn&rsquo;t working anymore (not synching).
+It seems that the behavior regarding an internal event changed in 10.11. I found an alternative and that&rsquo;s what&rsquo;s new in <code>Glukloader 1.0.5</code>. I also reverted
+a change from <code>1.0.4</code> to try and address instability issues when the receiver was plugged in on a Mac going idle. After some reading, I realized that this
+is something that <a href="https://github.com/armadsen/ORSSerialPort">ORSSerialPort</a> was supposed to be handling gracefully so I decided to upgrade to the latest
+release (which has a few related fixes) and see where this would get me.</p>
+
+<p>So, if you see this bug with <code>1.0.5</code>, please contact me.</p>
+
+<p>Grab the latest build <a href="https://dl.dropboxusercontent.com/u/3208429/glukloader%201.0.5.dmg?dl=1">here</a>.</p>
+
+       </div>   
+    </div>       
+  
+    <div class="row">
+       
       <h2><a href="http://blog.mygluk.it/posts/glukloader-1.0.4/">Glukloader 1.0.4</a></h2>
 
        <div class="post content">
