Update Glukloader download links before dropbox public folder shutdown.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ release (which has a few related fixes) and see where this would get me.</p>
 
 <p>So, if you see this bug with <code>1.0.5</code>, please contact me.</p>
 
-<p>Grab the latest build <a href="https://dl.dropboxusercontent.com/u/3208429/glukloader%201.0.5.dmg?dl=1">here</a>.</p>
+<p>Grab the latest build <a href="https://www.dropbox.com/s/5jr8wrgq5bmspbx/glukloader%201.0.5.dmg?dl=1">here</a>.</p>
 
        </div>   
     </div>       
@@ -88,7 +88,7 @@ release (which has a few related fixes) and see where this would get me.</p>
 
 <p>If you did have mysterious issues with your peripherals not responding after going idle, I apologize. Hopefully, this will solve that mystery.</p>
 
-<p>Grab the latest build <a href="https://dl.dropboxusercontent.com/u/3208429/glukloader%201.0.4.dmg?dl=1">here</a>.</p>
+<p>Grab the latest build <a href="https://www.dropbox.com/s/8nmjk1pi93p4kcw/glukloader%201.0.4.dmg?dl=1">here</a>.</p>
 
        </div>   
     </div>       
@@ -152,7 +152,7 @@ release (which has a few related fixes) and see where this would get me.</p>
        <div class="post content">
         <p>I got a log file in my inbox earlier this evening. Sometimes, people write an accompanying email describing a problem but this time, I only had the log file. It didn&rsquo;t take long to see the crash and stack trace in the logs. After a quick investigation, I found that there was a bug when the last sync had been done long enough ago that the last page synched didn&rsquo;t exist anymore on the receiver. That was an easy fix and I just pushed the release with the bugfix.</p>
 
-<p>Grab the latest build <a href="https://dl.dropboxusercontent.com/u/3208429/glukloader%201.0.2.dmg?dl=1">here</a>.</p>
+<p>Grab the latest build <a href="https://www.dropbox.com/s/9gywympy35u7x94/glukloader%201.0.2.dmg?dl=1">here</a>.</p>
 
 <p>Thanks to the anonymous bug report!</p>
 
